--- a/EatSmart/app/src/main/res/layout/activity_true_home_restau.xml
+++ b/EatSmart/app/src/main/res/layout/activity_true_home_restau.xml
@@ -7,22 +7,59 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.jerem.eatsmart.true_home_restau">
 
-    <Button
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Profile"
         android:id="@+id/button16"
-        android:layout_marginTop="139dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:src="@drawable/choose_profile"
+        android:maxHeight="120dp"
+        android:maxWidth="120dp"
+        android:minHeight="120dp"
+        android:minWidth="120dp"
+        android:clickable="true"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:background="@null"
+        android:layout_alignTop="@+id/button17"
+        android:layout_toLeftOf="@+id/textView5"
+        android:layout_toStartOf="@+id/textView5" />
 
-    <Button
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Packages"
         android:id="@+id/button17"
-        android:layout_marginTop="147dp"
-        android:layout_below="@+id/button16"
-        android:layout_alignLeft="@+id/button16"
-        android:layout_alignStart="@+id/button16" />
+        android:clickable="true"
+        android:adjustViewBounds="true"
+        android:background="@null"
+        android:scaleType="fitXY"
+        android:src="@drawable/choose_pack"
+        android:maxHeight="120dp"
+        android:maxWidth="120dp"
+        android:minHeight="120dp"
+        android:minWidth="120dp"
+        android:layout_marginBottom="130dp"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/textView5"
+        android:layout_toEndOf="@+id/textView5" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView15"
+        android:src="@drawable/name_logo_transparentbg"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:adjustViewBounds="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/text_go_to"
+        android:id="@+id/textView5"
+        android:textColor="#ff0000"
+        android:layout_marginBottom="52dp"
+        android:layout_above="@+id/button16"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
