--- a/EatSmart/app/src/main/res/layout/content_details_restaurant.xml
+++ b/EatSmart/app/src/main/res/layout/content_details_restaurant.xml
@@ -80,7 +80,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/editText4"
                 android:background="#ffffff"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="center_horizontal"
+                android:singleLine="true" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -99,7 +100,7 @@
                 android:background="#ffffff"
 
                 android:layout_gravity="center_horizontal"
-                android:textColor="#ffffff" />
+              />
 
             <TextView
                 android:layout_width="wrap_content"
