updated some stuff to conform with test cases

--- a/EatSmart/app/src/main/res/layout/activity_resto_edit.xml
+++ b/EatSmart/app/src/main/res/layout/activity_resto_edit.xml
@@ -82,6 +82,30 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Contact No."
+                android:id="@+id/textView26"
+                android:layout_below="@+id/editText4"
+                android:layout_centerHorizontal="true"
+                android:textColor="#ffffff"
+                android:layout_marginTop="0dp"
+                android:layout_gravity="center_horizontal" />
+
+            <EditText
+                android:layout_width="369dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/editText11"
+                android:layout_below="@+id/textView7"
+                android:layout_alignLeft="@+id/editText6"
+                android:layout_alignStart="@+id/editText6"
+                android:layout_alignRight="@+id/editText6"
+                android:layout_alignEnd="@+id/editText6"
+                android:background="#ffffff"
+                android:inputType="phone"
+                android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Category"
                 android:id="@+id/textView30"
                 android:layout_alignParentBottom="true"
