--- a/EatSmart/app/src/main/res/layout/activity_im_feeling_lucky.xml
+++ b/EatSmart/app/src/main/res/layout/activity_im_feeling_lucky.xml
@@ -37,13 +37,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView13"
-        android:layout_alignRight="@+id/imageView12"
-        android:layout_alignEnd="@+id/imageView12"
-        android:layout_toEndOf="@+id/imageView12"
         android:layout_below="@+id/textView34"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/button14"
-        android:background="#000000" />
+        android:background="#000000"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
