--- a/EatSmart/app/src/main/res/layout/content_details_restaurant.xml
+++ b/EatSmart/app/src/main/res/layout/content_details_restaurant.xml
@@ -9,13 +9,13 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_details_restaurant"
     tools:context="com.example.jerem.eatsmart.details_restaurant"
-    android:background="#ff0000">
+    android:background="@drawable/ro_signup_2">
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton2"
-        android:src="@drawable/signup_bt"
+        android:src="@drawable/next_bt"
         android:background="#00ffffff"
         android:maxHeight="120dp"
         android:maxWidth="120dp"
@@ -27,332 +27,54 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/scrollView2"
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/imageView5"
+        android:foreground="#00ffffff"
+        android:scaleType="fitXY"
+        android:background="@null"
+        android:src="@drawable/profile_logo"
+        android:nestedScrollingEnabled="false"
+        android:longClickable="true"
+        android:layout_centerHorizontal="true"
         android:layout_below="@+id/textView53"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/imageButton2">
+        android:layout_gravity="center_horizontal" />
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
+        android:text="Add Restaurant Logo"
+        android:id="@+id/button6"
+        android:layout_below="@+id/imageView5"
+        android:layout_centerHorizontal="true"
+        android:background="#00ffffff"
+        android:layout_gravity="center_horizontal"
+        android:backgroundTint="#00ffffff"
+        android:textColor="#ffffff" />
 
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:id="@+id/imageView5"
-                android:foreground="#00ffffff"
-                android:scaleType="fitXY"
-                android:background="@null"
-                android:src="@drawable/profile_logo"
-                android:nestedScrollingEnabled="false"
-                android:longClickable="true"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@+id/textView53"
-                android:layout_gravity="center_horizontal" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Restaurant Name"
+        android:id="@+id/textView52"
+        android:layout_gravity="center_horizontal"
+        android:textColor="#ffffff"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="38dp"
-                android:text="Add Restaurant Logo"
-                android:id="@+id/button6"
-                android:layout_below="@+id/imageView5"
-                android:layout_centerHorizontal="true"
-                android:background="#00ffffff"
-                android:layout_gravity="center_horizontal"
-                android:backgroundTint="#00ffffff"
-                android:textColor="#ffffff" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Restaurant Name"
-                android:id="@+id/textView52"
-                android:layout_gravity="center_horizontal"
-                android:textColor="#ffffff" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/editText4"
-                android:background="#ffffff"
-                android:layout_gravity="center_horizontal"
-                android:singleLine="true" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Description"
-                android:id="@+id/textView16"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal"
-                android:textColor="#ffffff" />
-
-            <EditText
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/editText6"
-                android:background="#ffffff"
-
-                android:layout_gravity="center_horizontal"
-              />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Category"
-                android:id="@+id/textView19"
-                android:layout_alignParentBottom="true"
-                android:layout_above="@+id/editText7"
-                android:layout_alignRight="@+id/textView3"
-                android:layout_alignEnd="@+id/textView3"
-                android:layout_gravity="center_horizontal"
-                android:textColor="#ffffff" />
-
-            <GridLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:columnCount="3"
-                android:rowCount="3"
-                android:id="@+id/gridLayout2"
-                android:layout_above="@+id/editText16"
-                android:layout_alignTop="@+id/textView16"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal">
-
-                <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Cafe"
-                    android:id="@+id/radioButton5"
-                    android:layout_row="0"
-                    android:layout_column="0"
-                    android:allowUndo="true"
-                    android:enabled="true"
-                    android:clickable="true"
-                    android:textColor="#ffffff" />
-
-                <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Dessert"
-                    android:id="@+id/radioButton6"
-                    android:layout_row="0"
-                    android:layout_column="1"
-                    android:allowUndo="true"
-                    android:enabled="true"
-                    android:clickable="true"
-                    android:textColor="#ffffff" />
-
-                <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/bar"
-                    android:id="@+id/radioButton16"
-                    android:layout_row="1"
-                    android:layout_column="0"
-                    android:allowUndo="true"
-                    android:enabled="true"
-                    android:clickable="true"
-                    android:textColor="#ffffff" />
-
-                <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Grill"
-                    android:id="@+id/radioButton23"
-                    android:layout_row="1"
-                    android:layout_column="1"
-                    android:textColor="#ffffff"
-                    android:elegantTextHeight="false"
-                    android:enabled="true"
-                    android:allowUndo="true"
-                    android:clickable="true" />
-
-                <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Fine Dining"
-                    android:id="@+id/radioButton24"
-                    android:layout_row="1"
-                    android:layout_column="2"
-                    android:allowUndo="true"
-                    android:enabled="true"
-                    android:clickable="true"
-                    android:textColor="#ffffff" />
-
-                <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Veg"
-                    android:id="@+id/radioButton25"
-                    android:layout_row="2"
-                    android:layout_column="0"
-                    android:allowUndo="true"
-                    android:enabled="true"
-                    android:clickable="true"
-                    android:textColor="#ffffff" />
-
-                <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Buffet"
-                    android:id="@+id/radioButton26"
-                    android:layout_row="2"
-                    android:layout_column="1"
-                    android:allowUndo="true"
-                    android:enabled="true"
-                    android:clickable="true"
-                    android:textColor="#ffffff" />
-
-                <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Lutong Bahay"
-                    android:id="@+id/radioButton27"
-                    android:layout_row="0"
-                    android:layout_column="2"
-                    android:allowUndo="true"
-                    android:clickable="true"
-                    android:enabled="true"
-                    android:textColor="#ffffff" />
-
-                <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Fast Food"
-                    android:id="@+id/radioButton28"
-                    android:layout_row="2"
-                    android:layout_column="2"
-                    android:allowUndo="true"
-                    android:enabled="true"
-                    android:clickable="true"
-                    android:textColor="#ffffff" />
-            </GridLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Budget"
-                android:id="@+id/textView20"
-                android:layout_above="@+id/gridLayout2"
-                android:layout_alignTop="@+id/imageButton2"
-                android:layout_alignLeft="@+id/imageButton2"
-                android:layout_alignStart="@+id/imageButton2"
-                android:layout_gravity="center_horizontal"
-                android:textColor="#ffffff" />
-
-            <RadioGroup
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/radioGroup7"
-                android:orientation="horizontal"
-                android:layout_below="@+id/textView20"
-                android:layout_centerHorizontal="true">
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/text_budget_1"
-                    android:textColor="#ffffff"
-                    android:id="@+id/radioButton30"
-                    />
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/text_budget_2"
-                    android:textColor="#ffffff"
-                    android:id="@+id/radioButton31"
-
-                    />
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/text_budget_3"
-                    android:textColor="#ffffff"
-                    android:id="@+id/radioButton32"
-                    />
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/text_budget_4"
-                    android:textColor="#ffffff"
-                    android:id="@+id/radioButton33"
-                    />
-            </RadioGroup>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Location"
-                android:id="@+id/textView21"
-                android:layout_centerVertical="true"
-                android:layout_alignLeft="@+id/textView13"
-                android:layout_alignStart="@+id/textView13"
-                android:layout_gravity="center_horizontal"
-                android:textColor="#ffffff" />
-
-            <RadioGroup
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textView37"
-                android:layout_centerHorizontal="true"
-                android:gravity="center_vertical"
-                android:id="@+id/radioGroup8">
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/text_location_1"
-                    android:textColor="#ffffff"
-                    android:id="@+id/radioButton34"
-                    />
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/text_location_2"
-                    android:textColor="#ffffff"
-                    android:id="@+id/radioButton35"
-                    />
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/text_location_3"
-                    android:textColor="#ffffff"
-                    android:id="@+id/radioButton36"
-                    />
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/text_location_4"
-                    android:textColor="#ffffff"
-                    android:id="@+id/radioButton37"
-                    />
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/text_location_5"
-                    android:textColor="#ffffff"
-                    android:id="@+id/radioButton38"
-                    />
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/text_location_6"
-                    android:textColor="#ffffff"
-                    android:id="@+id/radioButton39"
-                    />
-            </RadioGroup>
-
-        </LinearLayout>
-    </ScrollView>
+    <EditText
+        android:layout_width="313dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText4"
+        android:background="#ffffff"
+        android:layout_gravity="center_horizontal"
+        android:singleLine="true"
+        android:layout_below="@+id/textView52"
+        android:layout_alignRight="@+id/button6"
+        android:layout_alignEnd="@+id/button6"
+        android:layout_alignLeft="@+id/button6"
+        android:layout_alignStart="@+id/button6" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -378,5 +100,50 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Description"
+        android:id="@+id/textView25"
+        android:layout_gravity="center_horizontal"
+        android:textColor="#ffffff"
+        android:layout_below="@+id/editText10"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp" />
+
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText6"
+        android:background="#ffffff"
+        android:layout_gravity="center_horizontal"
+        android:layout_below="@+id/textView25"
+        android:layout_alignRight="@+id/editText4"
+        android:layout_alignEnd="@+id/editText4"
+        android:layout_alignLeft="@+id/editText4"
+        android:layout_alignStart="@+id/editText4" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Contact No."
+        android:id="@+id/textView7"
+        android:layout_below="@+id/editText4"
+        android:layout_centerHorizontal="true"
+        android:textColor="#ffffff"
+        android:layout_marginTop="10dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText10"
+        android:layout_below="@+id/textView7"
+        android:layout_alignLeft="@+id/editText6"
+        android:layout_alignStart="@+id/editText6"
+        android:layout_alignRight="@+id/editText6"
+        android:layout_alignEnd="@+id/editText6"
+        android:background="#ffffff"
+        android:inputType="phone" />
 
 </RelativeLayout>
