--- a/EatSmart/app/src/main/res/layout/activity_choose_sign_up.xml
+++ b/EatSmart/app/src/main/res/layout/activity_choose_sign_up.xml
@@ -16,18 +16,19 @@
         android:clickable="true"
         android:contentDescription="@string/welcome_customer"
         android:src="@drawable/customer_bt"
-        android:maxHeight="120dp"
-        android:maxWidth="120dp"
+        android:maxHeight="160dp"
+        android:maxWidth="160dp"
         android:minHeight="120dp"
         android:minWidth="120dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
         android:background="@null"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="60dp"
         android:layout_below="@+id/textView12"
-        android:layout_toLeftOf="@+id/button4"
-        android:layout_toStartOf="@+id/button4"
-        android:layout_marginTop="39dp" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="20dp" />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -36,8 +37,8 @@
         android:clickable="true"
         android:contentDescription="@string/welcome_Restaurant"
         android:src="@drawable/resto_owner_bt"
-        android:maxHeight="120dp"
-        android:maxWidth="120dp"
+        android:maxHeight="160dp"
+        android:maxWidth="160dp"
         android:minHeight="120dp"
         android:minWidth="120dp"
         android:adjustViewBounds="true"
@@ -45,8 +46,10 @@
         android:background="@null"
         android:layout_gravity="center_horizontal"
         android:layout_alignTop="@+id/button3"
-        android:layout_alignRight="@+id/textView12"
-        android:layout_alignEnd="@+id/textView12" />
+        android:layout_alignRight="@+id/imageView4"
+        android:layout_alignEnd="@+id/imageView4"
+        android:layout_marginRight="20dp"
+        android:layout_marginEnd="32dp" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -55,10 +58,11 @@
         android:src="@drawable/name_logo_transparentbg"
         android:maxHeight="100dp"
         android:minWidth="100dp"
+        android:adjustViewBounds="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:adjustViewBounds="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="41dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -71,9 +75,13 @@
         android:typeface="sans"
         android:hint="@string/username_text"
         android:textStyle="bold"
+        android:layout_marginTop="92dp"
+        android:textAlignment="center"
         android:layout_below="@+id/imageView4"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="45dp" />
+        android:layout_alignRight="@+id/textView12"
+        android:layout_alignEnd="@+id/textView12"
+        android:layout_marginRight="52dp"
+        android:layout_marginEnd="52dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -87,6 +95,6 @@
         android:hint="@string/username_text"
         android:layout_below="@+id/textView11"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp" />
+        android:layout_marginTop="20dp" />
 
 </RelativeLayout>
