--- a/EatSmart/app/src/main/res/layout/content_details_restaurant.xml
+++ b/EatSmart/app/src/main/res/layout/content_details_restaurant.xml
@@ -67,7 +67,7 @@
         android:layout_width="313dp"
         android:layout_height="wrap_content"
         android:id="@+id/editText4"
-        android:background="#ffffff"
+        android:background="@drawable/border"
         android:layout_gravity="center_horizontal"
         android:singleLine="true"
         android:layout_below="@+id/textView52"
@@ -116,7 +116,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editText6"
-        android:background="#ffffff"
+        android:background="@drawable/border"
         android:layout_gravity="center_horizontal"
         android:layout_below="@+id/textView25"
         android:layout_alignRight="@+id/editText4"
@@ -143,7 +143,7 @@
         android:layout_alignStart="@+id/editText6"
         android:layout_alignRight="@+id/editText6"
         android:layout_alignEnd="@+id/editText6"
-        android:background="#ffffff"
+        android:background="@drawable/border"
         android:inputType="phone" />
 
 </RelativeLayout>
