--- a/EatSmart/app/src/main/res/layout/activity_home_restaurant.xml
+++ b/EatSmart/app/src/main/res/layout/activity_home_restaurant.xml
@@ -13,7 +13,7 @@
         android:id="@+id/imageView6"
         android:scaleType="fitXY"
         android:visibility="visible"
-        android:background="#000000"
+        android:background="#00000000"
         android:layout_below="@+id/textView54"
         android:layout_centerHorizontal="true" />
 
